# ML-FLow-Project

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  trials.ipynb
src/mlProject/: __init__.py
src/mlProject/components/: data_ingestion.py  data_transformation.py  data_validation.py
src/mlProject/config/: configuration.py
src/mlProject/entity/: config_entity.py
src/mlProject/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py
src/mlProject/utils/: common.py
