[tool.poetry]
name = "ml-flow-project"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas="^1.3.3"
mlflow="^1.20.2"
notebook="^6.4.4"
numpy="^1.21.2"
scikit-learn="^0.24.2"
matplotlib="^3.4.3"
python-box="^5.4.1"
pyYAML="^5.4.1"
tqdm="^4.62.3"
ensure="^2.0.0"
joblib="^1.0.1"
types-pyYAML="^0.1.6"
Flask="^2.0.2"
Flask-Cors="^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
